Fix spacing on landing page

--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -12,9 +12,7 @@
 }
 
 .noSpacing {
-  @media only screen and (max-width: 1040px) {
-    padding-top: 0;
-  }
+  padding: 0;
 }
 
 .siteFooter {
